[project]
name = "storagevoice-ai"
version = "0.1.0"
description = "Multi-tenant AI voice automation for self-storage operators"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.1.0",
  "sqlalchemy>=2.0.40",
  "alembic>=1.16.0",
  "psycopg[binary]>=3.2.0",
  "cryptography>=45.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
